Improve content filter button and fix on mobile

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -75,11 +75,11 @@
   animation-duration: 0.4s
 } 
 
-.content-filter-btn .icon-container::after {
+.content-filter-btn .icon-container::before {
   content: "\e32a";
 }
 
-.content-filter-btn[data-state="closed"] .icon-container::after {
+.content-filter-btn[data-state="closed"] .icon-container::before {
   content: "\e3d4";
 }
 
